spaces are for reimus

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta charset="UTF-8">
     <title>mery chistmas mates</title>
 
-    <link rel="stylesheet" type="text/css" href="alice styles.css">
+    <link rel="stylesheet" type="text/css" href="alicestyles.css">
 
     <script src="dragscroll.js"></script>
   </head>
 
   <body>
     <div class="dragscroll alice-wrapping-paper">
-      <video class="alice" src="its christmas with alice.mp4" autoplay loop></video>
+      <video class="alice" src="itschristmaswithalice.mp4" autoplay loop></video>
     </div>
 
-    <video class="not-alice" src="romantic christmas music by alice.mp3" autoplay loop></video>
+    <video class="not-alice" src="romanticchristmasmusicbyalice.mp3" autoplay loop></video>
   </body>
 
 </html>
